# practicas_c

./: CMakeLists.txt  README.md  comparacion_char.cpp  convert.h  credentials.txt  funciones.cpp  mayor_suma_30.cpp  numero_primo.cpp  password.cpp  promedio.cpp  seguridad_hijo.cpp  tienda.cpp
