cmake_minimum_required(VERSION 3.1)

project(PracticasC LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(comparacion_char.out "comparacion_char.cpp")
add_executable(mayor_suma_30.out "mayor_suma_30.cpp")
add_executable(seguridad_hijo.out "seguridad_hijo.cpp")
add_executable(password.out "password.cpp")
add_executable(funciones.out "funciones.cpp")
add_executable(promedio.out "promedio.cpp")
add_executable(numero_primo.out "numero_primo.cpp")
